syntax = "proto3";

package secrets_grpc_proto.secrets.v1;

import "envelope.proto";

message RegisterTokenRequest {
  saflib.common.v1.SafAuth auth = 1;
  saflib.common.v1.SafRequest request = 2;
  string service_name = 3;
  string service_version = 4;
  string token = 5;
}

message RegisterTokenResponse {
  string status = 1;  // "pending_approval" | "approved" | "denied"
  string message = 2;
}
